# multimetro-inteligente

./: .gitignore  LICENSE  README.md  bootstrap_project.py  pyproject.toml  requirements.txt  specs2.docx  test_simple.py
docs/: estado-atual-projeto.md
src/: __init__.py  main.py
src/controllers/: point_manager.py  state_manager.py
src/models/: point.py  project.py
src/processing/: persistence.py
src/views/: image_viewer old.py  image_viewer.py  main_window old.py  main_window.py  points_table.py
tests/unit/: test_main_window.py  test_point.py  test_point_manager.py  test_project.py  test_state_manager.py
